fix(styles): overflow issue

--- a/galasa-ui/src/styles/test-runs/saved-queries/QueryItem.module.css
+++ b/galasa-ui/src/styles/test-runs/saved-queries/QueryItem.module.css
@@ -71,10 +71,6 @@
   cursor: default;
 }
 
-.overflowMenu {
-  z-index: 10000;
-}
-
 .overflowMenu:hover {
   background-color: var(--cds-layer-selected);
 }
